# geometry_processing

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AlignedBox.h.3CC091C3C9D79478.idx  AlignedVector3.14B2F94D18191076.idx  AmbiVector.h.F383AAE5C3B372F6.idx  Amd.h.8B4B9A845A0E65EB.idx  AngleAxis.h.7465607E9E379C47.idx  AnnoyingScalar.h.8933416753BF61CE.idx  ArithmeticSequence.h.4957CFDFE9DCB68B.idx  Array.h.CE410715571B62D7.idx  ArrayBase.h.0E02C5BF0DB806E2.idx  ArrayCwiseBinaryOps.h.1D5937CFEF6A9414.idx  ArrayCwiseUnaryOps.h.0412EE6C32A39B7C.idx  ArrayWrapper.h.ABFA0A56B7D22766.idx  Assign.h.C454C800AE75AB9F.idx  AssignEvaluator.h.4F81E142B434FFBD.idx  AssignmentFunctors.h.6513E10ADEB82379.idx  AutoDiff.E35D0523186A4EC2.idx  AutoDiffJacobian.h.84B5C676649494F4.idx  AutoDiffScalar.h.FCE1C5C21132C046.idx  BDCSVD.h.83AF5EFE0A61B73D.idx  BFloat16.h.7EF2ED34C5408850.idx  BVAlgorithms.h.83CF27684B039BC6.idx  BVH.B65D158B2029BBD2.idx  BVH.cpp.1033051392A368AE.idx  BVH_Example.cpp.BAF075F19DFE9602.idx  BandMatrix.h.15FFE9772C837A25.idx  BandTriangularSolver.h.92E4AE3CDAC74DD4.idx  BasicPreconditioners.h.4D734274AE949180.idx  BenchTimer.h.93759C6A4DFC32EE.idx  BesselFunctions.h.79964890A6FD9AB4.idx  BesselFunctionsArrayAPI.h.C9CBBFF94B0BE8DB.idx  BesselFunctionsBFloat16.h.6BB9C5FB2A93DC6E.idx  BesselFunctionsFunctors.h.0E8E3FCED15FE573.idx  BesselFunctionsHalf.h.2EFEC694C5161478.idx  BesselFunctionsImpl.h.0964D16DE6209ECC.idx  BesselFunctionsPacketMath.h.5543BBE8CB865DD2.idx  BiCGSTAB.h.B654032FD7F9FB35.idx  BinaryFunctors.h.DC92FF0A35866130.idx  BlasUtil.h.9B997801D076B61A.idx  Block.h.36F40C44FF6917BC.idx  BlockHouseholder.h.A78937AC87351BF5.idx  (+1055 more)
exec/: psr.cpp  smooth.cpp  tutte.cpp  viewmesh.cpp
include/geo_utils/: extra.h  fd_interpolate.h  fd_partial_derivative.h  parser.h  visualize.h
src/exec/: psr.cpp
src/geo_utils/: cotmatrix.cpp  fd_grad.cpp  fd_interpolate.cpp  fd_partial_derivative.cpp  parser.cpp  visualize.cpp
src/psr/: fd_grad.cpp  fd_interpolate.cpp  fd_partial_derivative.cpp  poisson_surface_reconstruction.cpp
